feat: 저장위치, 쿠키값 자동 저장 및 불러오기 refactor: Menu, Toolbar 분리 refactor: mvvm 패턴 적용 refactor: callback을 pubsub으로 변경 refactor: 패키지 분리, 리소스 폴더 분리

--- a/src/main/resources/scene/dialog_add_download_task.fxml
+++ b/src/main/resources/scene/dialog_add_download_task.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="350.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.moonchan.streaming.downloader.controller.AddDownloadTaskDialogController">
+<AnchorPane prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.moonchan.streaming.downloader.ui.addtask.AddDownloadTaskView">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -17,18 +17,21 @@
                </padding>
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="80.0" text="영상주소" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                  <TextField fx:id="editUrl" prefHeight="40.0" prefWidth="507.0">
+                  <TextField fx:id="editUrl" prefHeight="40.0" prefWidth="505.0">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
                   </TextField>
-                  <Button fx:id="btnAutoComplete" mnemonicParsing="false" onAction="#onAutoCompleteButtonClicked" prefHeight="38.0" prefWidth="95.0" text="자동완성" />
+                  <Button fx:id="btnAutoComplete" mnemonicParsing="false" onAction="#onAutoCompleteButtonClicked" prefHeight="38.0" prefWidth="95.0" text="자동완성">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="80.0" text="주소형식" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                  <TextField fx:id="editUrlFormat" prefHeight="40.0" prefWidth="598.0">
+                  <TextField fx:id="editUrlFormat" prefHeight="40.0" prefWidth="600.0">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
@@ -41,7 +44,7 @@
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="80.0" text="시작" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                  <TextField fx:id="editStart" prefHeight="40.0" prefWidth="598.0" promptText="스트리밍 시작 인덱스">
+                  <TextField fx:id="editStart" prefHeight="40.0" prefWidth="600.0" promptText="스트리밍 시작 인덱스">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
@@ -54,7 +57,7 @@
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="80.0" text="끝" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                  <TextField fx:id="editEnd" prefHeight="40.0" prefWidth="598.0" promptText="스트리밍 끝 인덱스">
+                  <TextField fx:id="editEnd" prefHeight="40.0" prefWidth="600.0" promptText="스트리밍 끝 인덱스">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
@@ -67,15 +70,57 @@
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="80.0" text="저장위치" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                  <TextField fx:id="editDest" prefHeight="40.0" prefWidth="507.0" promptText="영상저장 위치">
+                  <TextField fx:id="editSaveLocation" prefHeight="40.0" prefWidth="505.0" promptText="영상저장 위치">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
                   </TextField>
-                  <Button fx:id="btnBrowse" mnemonicParsing="false" onAction="#onBrowseButtonClicked" prefHeight="38.0" prefWidth="95.0" text="찾기" />
+                  <Button fx:id="btnBrowse" mnemonicParsing="false" onAction="#onBrowseButtonClicked" prefHeight="38.0" prefWidth="95.0" text="찾기">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin></Button>
                </children>
                <padding>
                   <Insets bottom="5.0" top="5.0" />
+               </padding>
+            </HBox>
+            <HBox prefHeight="150.0" prefWidth="200.0">
+               <children>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="80.0" text="쿠키" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
+                  <TableView fx:id="tableCookie" editable="true" prefHeight="40.0" prefWidth="600.0">
+                    <columns>
+                      <TableColumn fx:id="colKey" prefWidth="289.0" text="KEY" />
+                      <TableColumn fx:id="colValue" prefWidth="300.0" text="VALUE" />
+                    </columns>
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </HBox.margin>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </children>
+               <padding>
+                  <Insets bottom="5.0" top="5.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <TextField fx:id="editCookieKey" prefHeight="38.0" prefWidth="213.0" promptText="KEY" />
+                  <TextField fx:id="editCookieValue" prefHeight="38.0" prefWidth="213.0" promptText="VALUE">
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button mnemonicParsing="false" onAction="#onAddCookieButtonClicked" prefHeight="38.0" prefWidth="100.0" text="추가/수정">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#onRemoveCookieButtonClicked" prefHeight="38.0" prefWidth="60.0" text="삭제" />
+               </children>
+               <padding>
+                  <Insets bottom="5.0" />
                </padding>
             </HBox>
          </children>
