--- a/src/main/resources/scene/main.fxml
+++ b/src/main/resources/scene/main.fxml
@@ -10,7 +10,7 @@
         <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <fx:include fx:id="menu" source="menu.fxml"/>
+                <!--<fx:include fx:id="menu" source="menu.fxml"/>-->
                 <fx:include fx:id="toolbar" source="toolbar.fxml"/>
                 <TabPane tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
                     <tabs>
