fix: ui 확대 시 오류 수정

--- a/gui/src/main/resources/scene/toolbar.fxml
+++ b/gui/src/main/resources/scene/toolbar.fxml
@@ -11,7 +11,7 @@
              AnchorPane.topAnchor="0.0">
         <items>
             <Button id="btnAddDownloadTask" mnemonicParsing="false"
-                    onAction="#onAddButtonClicked" text="추가"/>
+                    onAction="#onAddButtonClicked" text="다운로드 추가"/>
             <Button id="btnClearFinishedTask" mnemonicParsing="false"
                     onAction="#onClearButtonClicked" text="완료 목록 삭제"/>
         </items>
