--- a/gui/src/main/resources/scene/dialog_add_download_task.fxml
+++ b/gui/src/main/resources/scene/dialog_add_download_task.fxml
@@ -4,165 +4,135 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="583.0" prefWidth="691.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.moonchan.ts.downloader.gui.ui.addtask.AddDownloadTaskView">
-    <children>
-        <VBox minWidth="600.0" prefHeight="533.0" prefWidth="650.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <HBox alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="200.0">
-                    <padding>
-                        <Insets bottom="5.0" top="5.0" />
-                    </padding>
-                    <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0" prefWidth="80.0" text="영상주소" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="editUrl" prefHeight="40.0" prefWidth="200.0">
-                            <HBox.hgrow>
-                                <Priority fx:constant="ALWAYS" />
-                            </HBox.hgrow>
-                            <HBox.margin>
-                                <Insets left="5.0" right="5.0" />
-                            </HBox.margin>
-                        </TextField>
-                        <Button fx:id="btnAutoComplete" alignment="CENTER" minHeight="38.0" minWidth="75.0" mnemonicParsing="false" onAction="#onAutoCompleteButtonClicked" prefHeight="38.0" prefWidth="95.0" text="자동완성" />
-                    </children>
-                </HBox>
-                <HBox prefHeight="50.0" prefWidth="200.0">
-                    <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0" prefWidth="80.0" text="주소형식" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="editUrlFormat" prefHeight="40.0" prefWidth="600.0">
-                            <HBox.hgrow>
-                                <Priority fx:constant="ALWAYS" />
-                            </HBox.hgrow>
-                            <HBox.margin>
-                                <Insets left="5.0" />
-                            </HBox.margin>
-                        </TextField>
-                    </children>
-                    <padding>
-                        <Insets bottom="5.0" top="5.0" />
-                    </padding>
-                </HBox>
-                <HBox fx:id="boxBitrate" alignment="CENTER_RIGHT" prefHeight="40" prefWidth="200.0" spacing="5.0">
-                    <children>
-                        <RadioButton fx:id="rbtMd" mnemonicParsing="false" text="270(MD)" userData="MOBILE" />
-                        <RadioButton fx:id="rbtSd" mnemonicParsing="false" text="480(SD)" userData="SD" />
-                        <RadioButton fx:id="rbtHd" mnemonicParsing="false" text="720(HD)" userData="HD" />
-                        <RadioButton fx:id="rbtFhd" mnemonicParsing="false" text="1080(FHD)" userData="FHD" />
-                    </children>
-                </HBox>
-                <HBox prefHeight="50.0" prefWidth="200.0">
-                    <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0" prefWidth="80.0" text="시작" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="editStart" prefHeight="40.0" prefWidth="600.0" promptText="스트리밍 시작 인덱스">
-                            <HBox.hgrow>
-                                <Priority fx:constant="ALWAYS" />
-                            </HBox.hgrow>
-                            <HBox.margin>
-                                <Insets left="5.0" />
-                            </HBox.margin>
-                        </TextField>
-                    </children>
-                    <padding>
-                        <Insets bottom="5.0" top="5.0" />
-                    </padding>
-                </HBox>
-                <HBox prefHeight="50.0" prefWidth="200.0">
-                    <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0" prefWidth="80.0" text="끝" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="editEnd" prefHeight="40.0" prefWidth="600.0" promptText="스트리밍 끝 인덱스">
-                            <HBox.hgrow>
-                                <Priority fx:constant="ALWAYS" />
-                            </HBox.hgrow>
-                            <HBox.margin>
-                                <Insets left="5.0" />
-                            </HBox.margin>
-                        </TextField>
-                    </children>
-                    <padding>
-                        <Insets bottom="5.0" top="5.0" />
-                    </padding>
-                </HBox>
-                <HBox prefHeight="50.0" prefWidth="200.0">
-                    <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0" prefWidth="80.0" text="저장위치" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="editSaveLocation" prefHeight="40.0" prefWidth="505.0" promptText="영상저장 위치">
-                            <HBox.hgrow>
-                                <Priority fx:constant="ALWAYS" />
-                            </HBox.hgrow>
-                            <HBox.margin>
-                                <Insets left="5.0" right="5.0" />
-                            </HBox.margin>
-                        </TextField>
-                        <Button fx:id="btnBrowse" minHeight="38.0" minWidth="95.0" mnemonicParsing="false" onAction="#onBrowseButtonClicked" prefHeight="38.0" prefWidth="75.0" text="찾기" />
-                    </children>
-                    <padding>
-                        <Insets bottom="5.0" top="5.0" />
-                    </padding>
-                </HBox>
-                <HBox prefHeight="150.0" prefWidth="200.0">
-                    <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0" prefWidth="80.0" text="쿠키" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS" />
-                        <TableView fx:id="tableCookie" editable="true" prefHeight="40.0" prefWidth="600.0">
-                            <columns>
-                                <TableColumn fx:id="colKey" prefWidth="289.0" text="KEY" />
-                                <TableColumn fx:id="colValue" prefWidth="300.0" text="VALUE" />
-                            </columns>
-                            <HBox.hgrow>
-                                <Priority fx:constant="ALWAYS" />
-                            </HBox.hgrow>
-                            <HBox.margin>
-                                <Insets left="5.0" />
-                            </HBox.margin>
-                            <columnResizePolicy>
-                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                            </columnResizePolicy>
-                        </TableView>
-                    </children>
-                    <padding>
-                        <Insets bottom="5.0" top="5.0" />
-                    </padding>
-                    <VBox.vgrow>
-                        <Priority fx:constant="ALWAYS" />
-                    </VBox.vgrow>
-                </HBox>
-                <HBox alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="200.0">
-                    <children>
-                        <TextField fx:id="editCookieKey" prefHeight="38.0" prefWidth="213.0" promptText="KEY">
-                            <HBox.margin>
-                                <Insets left="84.0" />
-                            </HBox.margin>
-                        </TextField>
-                        <TextField fx:id="editCookieValue" prefHeight="38.0" prefWidth="213.0" promptText="VALUE">
-                            <HBox.hgrow>
-                                <Priority fx:constant="ALWAYS" />
-                            </HBox.hgrow>
-                            <HBox.margin>
-                                <Insets left="5.0" />
-                            </HBox.margin>
-                        </TextField>
-                        <Button minHeight="38.0" minWidth="100.0" mnemonicParsing="false" onAction="#onAddCookieButtonClicked" prefHeight="38.0" prefWidth="100.0" text="추가/수정">
-                            <HBox.margin>
-                                <Insets left="5.0" />
-                            </HBox.margin>
-                        </Button>
-                        <Button minHeight="38.0" minWidth="60.0" mnemonicParsing="false" onAction="#onRemoveCookieButtonClicked" prefHeight="38.0" prefWidth="60.0" text="삭제">
-                            <HBox.margin>
-                                <Insets left="5.0" />
-                            </HBox.margin>
-                        </Button>
-                    </children>
-                    <padding>
-                        <Insets bottom="5.0" />
-                    </padding>
-                </HBox>
-            </children>
+<AnchorPane prefHeight="583.0" prefWidth="691.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="me.moonchan.ts.downloader.gui.ui.addtask.AddDownloadTaskView">
+
+    <VBox minWidth="600.0" prefHeight="533.0" prefWidth="650.0" AnchorPane.bottomAnchor="50.0"
+          AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="200.0">
             <padding>
-                <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                <Insets bottom="5.0" top="5.0"/>
             </padding>
-        </VBox>
-        <Button fx:id="btnCancel" layoutX="510.0" layoutY="360.0" mnemonicParsing="false" onAction="#onCancelButtonClicked" prefHeight="38.0" prefWidth="80.0" text="취소" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-        <Button fx:id="btnDone" layoutX="417.0" layoutY="360.0" mnemonicParsing="false" onAction="#onDoneButtonClicked" prefHeight="38.0" prefWidth="80.0" text="확인" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="100.0" />
-    </children>
+
+            <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0"
+                   prefWidth="80.0" text="영상주소" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS"
+                   HBox.hgrow="ALWAYS"/>
+            <TextField fx:id="editUrl" prefHeight="40.0" prefWidth="200.0">
+                <HBox.hgrow>
+                    <Priority fx:constant="ALWAYS"/>
+                </HBox.hgrow>
+                <HBox.margin>
+                    <Insets left="5.0" right="5.0"/>
+                </HBox.margin>
+            </TextField>
+            <Button fx:id="btnAutoComplete" alignment="CENTER" minHeight="38.0" minWidth="75.0" mnemonicParsing="false"
+                    onAction="#onAutoCompleteButtonClicked" prefHeight="38.0" prefWidth="95.0" text="자동완성"/>
+        </HBox>
+        <HBox prefHeight="50.0" prefWidth="200.0">
+            <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0"
+                   prefWidth="80.0" text="주소형식" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS"
+                   HBox.hgrow="ALWAYS"/>
+            <TextField fx:id="editUrlFormat" prefHeight="40.0" prefWidth="600.0">
+                <HBox.hgrow>
+                    <Priority fx:constant="ALWAYS"/>
+                </HBox.hgrow>
+                <HBox.margin>
+                    <Insets left="5.0"/>
+                </HBox.margin>
+            </TextField>
+            <padding>
+                <Insets bottom="5.0" top="5.0"/>
+            </padding>
+        </HBox>
+        <HBox fx:id="boxBitrate" alignment="CENTER_RIGHT" prefHeight="40" prefWidth="200.0" spacing="5.0">
+            <RadioButton fx:id="rbtMd" mnemonicParsing="false" text="270(MD)" userData="MOBILE"/>
+            <RadioButton fx:id="rbtSd" mnemonicParsing="false" text="480(SD)" userData="SD"/>
+            <RadioButton fx:id="rbtHd" mnemonicParsing="false" text="720(HD)" userData="HD"/>
+            <RadioButton fx:id="rbtFhd" mnemonicParsing="false" text="1080(FHD)" userData="FHD"/>
+        </HBox>
+        <HBox prefHeight="50.0" prefWidth="200.0">
+            <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0"
+                   prefWidth="80.0" text="저장위치" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS"
+                   HBox.hgrow="ALWAYS"/>
+            <TextField fx:id="editSaveLocation" prefHeight="40.0" prefWidth="505.0" promptText="영상저장 위치">
+                <HBox.hgrow>
+                    <Priority fx:constant="ALWAYS"/>
+                </HBox.hgrow>
+                <HBox.margin>
+                    <Insets left="5.0" right="5.0"/>
+                </HBox.margin>
+            </TextField>
+            <Button fx:id="btnBrowse" minHeight="38.0" minWidth="95.0" mnemonicParsing="false"
+                    onAction="#onBrowseButtonClicked" prefHeight="38.0" prefWidth="75.0" text="찾기"/>
+            <padding>
+                <Insets bottom="5.0" top="5.0"/>
+            </padding>
+        </HBox>
+        <HBox prefHeight="150.0" prefWidth="200.0">
+            <Label alignment="CENTER" contentDisplay="CENTER" minHeight="40.0" minWidth="80.0" prefHeight="40.0"
+                   prefWidth="80.0" text="쿠키" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" HBox.hgrow="ALWAYS"/>
+            <TableView fx:id="tableCookie" editable="true" prefHeight="40.0" prefWidth="600.0">
+                <columns>
+                    <TableColumn fx:id="colKey" prefWidth="289.0" text="KEY"/>
+                    <TableColumn fx:id="colValue" prefWidth="300.0" text="VALUE"/>
+                </columns>
+                <HBox.hgrow>
+                    <Priority fx:constant="ALWAYS"/>
+                </HBox.hgrow>
+                <HBox.margin>
+                    <Insets left="5.0"/>
+                </HBox.margin>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                </columnResizePolicy>
+            </TableView>
+            <padding>
+                <Insets bottom="5.0" top="5.0"/>
+            </padding>
+            <VBox.vgrow>
+                <Priority fx:constant="ALWAYS"/>
+            </VBox.vgrow>
+        </HBox>
+        <HBox alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="200.0">
+            <TextField fx:id="editCookieKey" prefHeight="38.0" prefWidth="213.0" promptText="KEY">
+                <HBox.margin>
+                    <Insets left="84.0"/>
+                </HBox.margin>
+            </TextField>
+            <TextField fx:id="editCookieValue" prefHeight="38.0" prefWidth="213.0" promptText="VALUE">
+                <HBox.hgrow>
+                    <Priority fx:constant="ALWAYS"/>
+                </HBox.hgrow>
+                <HBox.margin>
+                    <Insets left="5.0"/>
+                </HBox.margin>
+            </TextField>
+            <Button minHeight="38.0" minWidth="100.0" mnemonicParsing="false" onAction="#onAddCookieButtonClicked"
+                    prefHeight="38.0" prefWidth="100.0" text="추가/수정">
+                <HBox.margin>
+                    <Insets left="5.0"/>
+                </HBox.margin>
+            </Button>
+            <Button minHeight="38.0" minWidth="60.0" mnemonicParsing="false" onAction="#onRemoveCookieButtonClicked"
+                    prefHeight="38.0" prefWidth="60.0" text="삭제">
+                <HBox.margin>
+                    <Insets left="5.0"/>
+                </HBox.margin>
+            </Button>
+            <padding>
+                <Insets bottom="5.0"/>
+            </padding>
+        </HBox>
+        <padding>
+            <Insets bottom="15.0" left="10.0" right="10.0" top="15.0"/>
+        </padding>
+    </VBox>
+    <Button fx:id="btnCancel" layoutX="510.0" layoutY="360.0" mnemonicParsing="false" onAction="#onCancelButtonClicked"
+            prefHeight="38.0" prefWidth="80.0" text="취소" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0"/>
+    <Button fx:id="btnDone" layoutX="417.0" layoutY="360.0" mnemonicParsing="false" onAction="#onDoneButtonClicked"
+            prefHeight="38.0" prefWidth="80.0" text="확인" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="100.0"/>
     <padding>
-        <Insets right="5.0" />
+        <Insets right="5.0"/>
     </padding>
 </AnchorPane>
